--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,11 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.1",
     "expo": "~36.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-reanimated": "^1.4.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10"
   },
