--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,7 +16,8 @@
     "react-native-gesture-handler": "^1.5.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.0.10"
+    "react-navigation": "^4.0.10",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
